--- a/res/i18n/crowdin/ca.json
+++ b/res/i18n/crowdin/ca.json
@@ -12,7 +12,7 @@
     "achievements.cathammer.desc": "En el futur ombrívol i fosc d'una societat gatuna",
     "achievements.cathammer.starDesc": "A l'ombrívol i fosc futur d'un ésser gat no hi ha reinicis",
     "achievements.deadSpace.title": "Espai Mort",
-    "achievements.deadSpace.desc": "A l'espai ningú no pot sentir-te miolar.",
+    "achievements.deadSpace.desc": "A l'espai ningú et pot sentir miolar.",
     "achievements.heartOfDarkness.title": "Cor de la Foscor",
     "achievements.hundredYearsSolitude.desc": "Com de lluny és massa lluny?",
     "achievements.ironWill.title": "Voluntat de Ferro",
@@ -66,13 +66,25 @@
     "buildings.biolab.label": "Bio Lab",
     "challendge.ironWill.label": "Voluntat de Ferro",
     "menu.reset": "Reinicia",
+    "opts.theme.unicorn": "Unicorn",
+    "prestige.ascoh.desc": "Un consell secret de barrets",
     "religion.btn.refine": "Refinar",
+    "religion.pact.fractured.desc": "Has trencat el tracte... ara has de pagar",
     "unit.hour": "fortnite",
+    "science.blackchain.desc": "Tots els gats guais ho estan minant, així que penso que és algun tipus de mineral",
+    "science.calendar.flavor": "Quin dia deies que era?",
+    "science.sattelites.flavor": "Escampant vídeos de gats a la velocitat de la llum",
+    "space.umbraMission.desc": "Umbra és un forat fosc supermassiu al cor del sistema Helios",
     "tab.name.trade": "Comerciar",
     "time.fixCryochambers.label": "Reparar Criocambra",
     "time.reset.title": "Reinicia",
     "left.craft": "fabricar",
     "console.filter.trade": "Comerciar",
     "console.filter.craft": "Fabricar",
-    "village.census.lbl.leader": "Líder"
+    "village.census.lbl.leader": "Líder",
+    "village.census.page": "Pàgina {0} de {1}",
+    "workshop.alloySaw.label": "Serra d'Aleació",
+    "workshop.astrolabe.desc": "Millora el bonus de ciencia màxima del Observatori en un 50%",
+    "workshop.solarSatellites.desc": "Els satèlits generaran energia en comptes de consumir-la",
+    "workshop.titaniumMirrors.label": "钛反射器"
 }
