--- a/res/i18n/crowdin/eo.json
+++ b/res/i18n/crowdin/eo.json
@@ -350,6 +350,7 @@
     "menu.wipe": "Malkreiĝi",
     "menu.getTheApp": "Akiru la Fonprogramon",
     "navbar.title": "Ludo de Katetoj",
+    "navbar.menu.title": "Menuo",
     "navbar.btn.hunters": "Sendi ĉiujn ĉasistojn",
     "navbar.btn.praise": "Preĝu la sunon",
     "navbar.energy.cons": "Malproduktado: {0}Vt",
@@ -454,6 +455,7 @@
     "religion.tu.blackCore.label": "Nigra Koro",
     "religion.tu.blackLibrary.label": "Nigra Biblioteko",
     "religion.tu.blackNexus.flavor": "Okulo en la ĉielo.",
+    "religion.tu.blackRadiance.flavor": "Kiel ĉielarko en la mallumo",
     "religion.tu.holyGenocide.label": "Sankta Mortigaro",
     "religion.zu.blackPyramid.label": "Nigra Mumio",
     "unit.watt": "Vt",
@@ -593,7 +595,7 @@
     "tab.name.challenges": "Defioj",
     "tab.name.religion": "Religio",
     "tab.name.science": "Scienco",
-    "tab.name.space": "Kosmo",
+    "tab.name.space": "Spaco",
     "tab.name.stats": "Statistikoj",
     "tab.name.time": "Tempo",
     "tab.name.trade": "Trado",
@@ -639,6 +641,7 @@
     "ui.autosave.tooltip": "memkonservas...",
     "ui.save.tooltip": "Konservita!",
     "ui.energy.tooltip": "Energio",
+    "ui.chat.link": "Babili",
     "ui.log.filters.block": "[<span id=\"filterIcon\">+</span>] Mesaĝaj Filtroj",
     "ui.pause": "halti",
     "ui.unpause": "malhalti",
@@ -826,6 +829,7 @@
     "workshop.goldOre.label": "Orerco",
     "workshop.goldOre.flavor": "Brila!",
     "workshop.hubbleTelescope.desc": "Pliigos stelmapan produktadon pli 30%",
+    "workshop.internet.desc": "La kadidoj kune lernos kapablojn",
     "workshop.invisibleBlackHand.label": "Nevidebla Nigra Mano",
     "workshop.ironAxes.label": "Hakilo Fera",
     "workshop.ironAxes.desc": "Arbhakistoj estus 50% pli efektiva",
