--- a/res/i18n/crowdin/tok.json
+++ b/res/i18n/crowdin/tok.json
@@ -7,19 +7,26 @@
     "achievements.anachronox.title": "jaki pi tenpo pini",
     "achievements.anachronox.desc": "o pini",
     "achievements.atlasUnmeowed.title": "Lipu li mu ala",
+    "achievements.cathammer.title": "ilo kiwen pi soweli mute \"40K\"",
     "achievements.deadSpace.title": "ijo ala moli",
     "achievements.deadSpace.desc": "sina lon ijo ala, la jan ala li kute e mu sina.",
     "achievements.heartOfDarkness.title": "pilin pimeja",
     "achievements.hundredYearsSolitude.title": "tenpo mute pi wan",
     "achievements.ironWill.title": "wile kiwen",
+    "achievements.limitlessClicker.title": "noka li jo sinpin ala",
     "achievements.meowMeowRevolution.title": "sin mu mu",
+    "achievements.panel.label": "ijo alasa",
     "achievements.serenity.title": "pona",
+    "achievements.sinsOfEmpire.desc": "n, ni li lon anu?",
     "achievements.spaceOddity.title": "kon lupa nasa",
     "achievements.sunGod.title": "sewi suno",
+    "achievements.systemShock.desc": "mi ike, jan Dave. mi ken ala pali ni.",
     "achievements.theElderLegacy.title": "tenpo pini pi jan tenpo pini",
     "achievements.uberkatzhen.title": "soweli suli",
     "achievements.utopiaProject.title": "pali ma pona",
+    "achievements.utopiaProject.desc": "o jo soweli pona nampa 150%, anu nampa mute",
     "achievements.winterIsComing.title": "tenpo lete li kama",
+    "achievements.winterIsComing.desc": "o jo nampa 10 soweli moli",
     "achievements.youMonster.title": "sina monsuta",
     "achievements.youMonster.desc": "soweli lili moli.",
     "bld.msg.automation.slabs": "kepeken kiwen {0}, kiwen pali +{1}!",
@@ -36,12 +43,17 @@
     "btn.on.minor": "open",
     "btn.refine": "o pali",
     "btn.research": "o sona",
+    "btn.reset": "moli sona musi",
     "btn.sell": "o pana esun",
     "btn.sell.minor": "o pana esun",
     "btn.trade": "esun",
+    "btn.blocked.capital": "(ken ala)",
+    "sell.all.confirmation.msg": "sina wile pana ni ale, anu seme?",
+    "construct.all.confirmation.title": "pali ale",
     "buildings.academy.label": "tomo sona",
     "buildings.aqueduct.label": "tomo telo",
-    "buildings.aqueduct.desc": "o pali e kasi +3%",
+    "buildings.aqueduct.desc": "pali kasi li wawa 3%",
+    "buildings.aqueduct.flavor": "insa tejo ala",
     "buildings.barn.label": "tomo awen",
     "buildings.biolab.label": "tomo kasi sona",
     "buildings.chapel.label": "tomo kalama pona",
@@ -136,6 +148,7 @@
     "res.stack.tools": "ilo",
     "res.stack.village": "(:3) kulupu meso",
     "resources.alicorn.title": "soweli ni li jo waso",
+    "resources.antimatter.title": "ijo ala",
     "resources.blackcoin.title": "mani pimeja",
     "resources.bloodstone.title": "kiwen pi telo loje",
     "resources.blueprint.title": "lipu sona suli",
@@ -157,6 +170,7 @@
     "resources.slab.title": "supa kiwen",
     "resources.spice.title": "namako",
     "resources.starchart.title": "lipu pi sona mun",
+    "resources.timeCrystal.title": "kiwen tenpo",
     "resources.titanium.title": "kiwen wawa walo",
     "resources.unicorns.title": "soweli usawi pi kiwen lawa wan",
     "resources.unobtainium.title": "kiwen kama ala ",
@@ -169,6 +183,7 @@
     "science.brewery.label": "moku soweli pali",
     "science.cryptotheology.label": "sona sewi len",
     "space.planet.piscine.researchVessel.label": "poki sona",
+    "space.rorschachMission.label": "Losake",
     "stats.trades.current": "nanpa esun",
     "stats.trades.total": "nanpa esun",
     "tab.name.science": "sona",
@@ -177,7 +192,7 @@
     "tab.name.trade": "esun",
     "tab.name.workshop": "tomo pali",
     "trade.attitude.friendly": "pona",
-    "trade.attitude.hostile": "utala",
+    "trade.attitude.hostile": "ike",
     "trade.effectiveness": "wawa esun: +{0}%",
     "trade.race.dragons": "akesi waso",
     "trade.race.griffins": "soweli waso",
