Dev/beta -> master merge (#128)
* Rework Temporal Paradox trigger mechanism to update in real-time

* Fix bug: "No void is generated on first day of temporal paradox"

* Added Foreign Policies: Relations

* spiderChemist effect placed in calculateEffects so
it only runs when it has to.
Unlock realtion tied to calculateEffects so MP
diplomacy can upgrade it and run it on load.
Race Standing requirement removed.
Added a few comments.

* Added Lizard diplomats, changed Nagas and sharks

* Added Shark Botanists and Merchants
Removed Shark Shipwrights
Change: Lizard Priests

* Shark Scribes buy double the iron.
Embassy requirement and policy costs adjusted.

* Added Naga Architects

* Changed two policies

Changed Dragon Astrologers and Lizard Ecologists.
Removed some unused code.

* Added Spider Paleontologists

- Added Spider Paleontologists
- Changed Spider Geologists
- Nerfed Griffin Machinists

* Improved relation descriptions

* Bug fixes

* Add new policy: Scientific Communism

* fix to holy genocide production multiplier

Originally was supposed to be a linear uncapped increase, but it had a LDR limiting it to a 2x boost

* Balance changes

-  Spider Geologists are now based on embassies
- Shark Botanists refine bonus in IW is now instead wood bonus

* Fix the thing I broke in science.js

Fix error with meta being undefined--oopsie, that was my bad

* Balance changes

* Scaling policy changes

Spider Geologists and Lizard Diplomats no longer have a default bonus.
The description of policies scaling with embassies now includes the calculation.

* Policy description change

Changed two policy descriptions to second person, so they are line with all other policies.

* Relation description change

Changed the new relation policies to use second person.
Changed Ship potential bonus to Reactor Vessel bonus.

* Spider Chemist bug fix

When importing a save, spiders sold multiple instances of kerosene.

* Fix that bug where extra game-ticks would occur when the player cl

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1175,9 +1175,13 @@
     "res.stack.bonusTransf": "Bonus Transferred",
     "res.stack.boost": "Boost",
     "res.stack.buildings": "Buildings",
+    "res.stack.corruptionExistPenalty": "Penalty",
+    "res.stack.corruptionFromMarkers": "Markers",
     "res.stack.corruptionPerDay": "Corruption",
     "res.stack.corruptionPerDayProduction": "Corruption production",
     "res.stack.corruptionPerDaySiphoned": "Siphoning consumption",
+    "res.stack.corruptionSorrowBonus": "Black Radiances",
+    "res.stack.pactsConsumption": "Pacts",
     "res.stack.policy": "Policy",
     "res.stack.pollution": "Pollution",
     "res.stack.convCons": "Conversion Consumption",
@@ -1228,6 +1232,7 @@
     "reset.confirmation.msg35": "You will receive NO BONUS points. You will save old bonus points and achievements.",
     "reset.confirmation.msg60": "You will receive extra happiness bonus.",
     "reset.confirmation.msg70": "You will receive extra happiness and bonus to production.",
+    "reset.confirmation.stored.chrono.fuel": "The Chrono Furnace has a lot of fuel left, which will be wasted if you reset now.",
 
     "resources.alicorn.title": "alicorns",
     "resources.alloy.title": "alloy",
@@ -1652,6 +1657,9 @@
     "time.cfu.blastFurnace.label": "Chrono Furnace",
     "time.cfu.blastFurnace.desc": "Operates on chronoheat. Increases the maximum heat limit by 100.",
     "time.cfu.blastFurnace.desc2": "Automation skips one year into the future for each 100% of fuel consumed.",
+    "time.cfu.controlledDelay.label": "Controlled Delay",
+    "time.cfu.controlledDelay.desc": "Each one makes the Chrono Furnace wait 0.2 seconds before firing again.",
+    "time.cfu.controlledDelay.desc2": "Toggling automation has no gameplay effect.",
     "time.cfu.ressourceRetrieval.label": "Resource Retrieval",
     "time.cfu.ressourceRetrieval.desc": "Retrieve part of your yearly resources when you burn TC",
     "time.cfu.temporalAccelerator.label": "Temporal Accelerator",
@@ -1661,7 +1669,7 @@
     "time.cfu.temporalBattery.desc": "Improves your flux energy capacity by 25%",
     "time.cfu.temporalPress.label": "Temporal Press",
     "time.cfu.temporalPress.desc": "Allows for fine tuning of shattering",
-    "time.cfu.temporalPress.desc.automation": "Automation tweaks the custom shatter amount.",
+    "time.cfu.temporalPress.desc.automation": "Automation increases the custom shatter amount by a factor of 5.",
     "time.cfu.temporalImpedance.label": "Time Impedance",
     "time.cfu.temporalImpedance.desc": "Delay effect of Dark Future temporal penalty by 1000 years.",
     "time.cfu.timeBoiler.label": "Time Boiler",
@@ -1685,6 +1693,8 @@
     "time.shatter.tc.desc": "Destroy time crystals and unleash the stored temporal energy.<br> You will jump one year in the future. The price can increase over time.",
     "time.tc.shatter": "Temporal energy released, skipped {0} years",
     "time.tc.shatterOne": "Temporal energy released, skipped one year",
+    "time.use.heat": "Use Temporal Energy",
+    "time.use.heat.desc": "Use the fuel stored in your Chrono Furnace.<br> You will jump one year in the future for every 100% consumed.",
     "time.void": "Void",
     "time.vsu.chronocontrol.label": "Chronocontrol",
     "time.vsu.chronocontrol.desc": "Increase the duration of Temporal Paradox",
@@ -1827,7 +1837,7 @@
     "ui.option.hide.downgrade": "Hide 'downgrade' buttons",
     "ui.option.hide.bgimage": "Hide background image <i>(for color schemes where applicable)</i>",
     "ui.option.tooltips.right": "Move tooltips in right column",
-    "ui.option.more": "More..",
+    "ui.option.more": "More...",
     "ui.option.no.confirm": "Do not confirm when clearing all jobs, researching policy, upgrading buildings, or when buying or selling all (Shift-click)",
     "ui.option.iw.smelter": "Smelters turn off at 95% max Iron in Iron Will mode",
     "ui.option.disable.telemetry": "Disable game telemetry",
@@ -1836,6 +1846,7 @@
     "ui.option.batch.size": "Batch size of Ctrl-click",
     "ui.option.force.lz": "Always compress in-memory save, in UTF-16 <i>(experimental)</i>",
     "ui.option.compress.savefile": "Compress exported save file <i>(experimental)<br>\nWARNING: it generates save files that are NOT COMPATIBLE with older versions.</i>",
+    "ui.option.dev.mode.only": "(Only available in Dev Mode)",
     "ui.option.export.button": "Export",
     "ui.option.import.button": "Import",
     "ui.option.export": "Export To:",
@@ -2448,6 +2459,9 @@
     "workshop.strenghtenBuild.desc": "Repair Barn and Warehouse cracks with concrete.",
     "workshop.tachyonAccelerators.label": "Tachyon Accelerators",
     "workshop.tachyonAccelerators.desc": "Energy Rifts are 5 times as effective",
+    "workshop.tachyonModerator.label": "Tachyon Moderator",
+    "workshop.tachyonModerator.desc": "Unlocks more advanced tools to control the Chronoforge, such as pausing in between timeskips.",
+    "workshop.tachyonModerator.flavor": "It's also capable of automatically synchronizing cardinal grammeters.",
     "workshop.thinFilm.label": "Thin Film Cells",
     "workshop.thinFilm.desc": "Solar Panels are slightly more effective in winter",
     "workshop.thoriumEngine.label": "Thorium Drive",
