--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -274,7 +274,7 @@
     "calendar.msg.alicorn": "An Alicorn has descended from the sky!",
     "calendar.msg.alicorn.departed": "{0} alicorns ascended back into the heavens.",
     "calendar.msg.event": "A rare astronomical event occurred in the sky",
-    "calendar.msg.ivoryMeteor": "Ivory Meteor fell near the village, +{0} ivory!",
+    "calendar.msg.ivoryMeteor": "An Ivory Meteor fell near the village, +{0} ivory!",
     "calendar.msg.meteor": "A meteor fell near the village",
     "calendar.msg.rift": "A rift to the Unicorn Dimension has opened in your village, +{0} unicorns!",
     "calendar.msg.starchart": "You've made {0} starcharts!",
@@ -1041,7 +1041,7 @@
     "religion.pact.pactOfExtermination.label": "Pact of Extermination",
     "religion.pact.pactOfExtermination.desc": "Exterminate evil! Increase faith production",
     "religion.pact.pactOfFanaticism.label": "Fanaticism",
-    "religion.pact.pactOfFanaticism.desc": "Great devotion requires great sacrifise!",
+    "religion.pact.pactOfFanaticism.desc": "Great devotion requires great sacrifice!",
     "religion.pact.pactOfPurity.label": "Pact of Purity",
     "religion.pact.pactOfPurity.desc": "Purify the mortal plane, gaining insight into secrets of the universe and clearing reality from strains of darkness.",
     "religion.pact.payDebt.label": "Pay the debt",
@@ -1327,7 +1327,7 @@
     "science.agriculture.effectDesc": "Unlocks Farmers and Barns",
     "science.agriculture.flavor": "Best thing since sliced bread!",
     "science.ai.label": "Artificial Intelligence",
-    "science.ai.desc": "Artificial Intelligence is an attempt to create machine capable of reasoning and performing cognitive tasks.",
+    "science.ai.desc": "Artificial Intelligence is an attempt to create a machine capable of reasoning and performing cognitive tasks.",
     "science.ai.effectDesc": "Unlocks Neural Networks and AI Core",
     "science.animal.label": "Animal Husbandry",
     "science.animal.desc": "Domestication allows access to various animal resources via the pasture. Improves your food production.",
