--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1126,6 +1126,8 @@
     "religion.tu.singularity.label": "Event Horizon",
     "religion.tu.singularity.desc": "Improve global resource limits by 10%",
     "religion.tu.singularity.flavor": "A gateway... To what?",
+    "religion.undo.refine.complete": "The un-refining yielded {0} {1}.",
+    "religion.undo.refine.incomplete": "The refining could only be partially undone. Regained {0} {1}.",
     "religion.zu.blackPyramid.label": "Black Pyramid",
     "religion.zu.blackPyramid.desc": "A dark relic of unspeakable horrors.",
     "religion.zu.blackPyramid.flavor": "What have we done?!",
@@ -1817,12 +1819,12 @@
     "ui.pause.title": "Pause/unpause the game",
     "ui.undo": "undo ({0}s)",
     "ui.undo.title": "Undo the change",
-    "ui.undo.bld.build": "Undo building {0}× {1}.",
+    "ui.undo.bld.build": "Undo building {0}x {1}.",
     "ui.undo.bld.downgrade": "Undo downgrading {0} into {1}.",
-    "ui.undo.bld.sell": "Undo selling {0}× {1}.",
+    "ui.undo.bld.sell": "Undo selling {0}x {1}.",
     "ui.undo.bld.upgrade": "Undo upgrading {0} into {1}.",
-    "ui.undo.religion.refine": "Undo refining {0}× {1} into {2}× {3}.",
-    "ui.undo.workshop.craft": "Undo crafting {0}× {1}.",
+    "ui.undo.religion.refine": "Undo refining {0} {1} into {2} {3}.",
+    "ui.undo.workshop.craft": "Undo crafting {0} {1}.",
     "ui.queue.link": "Queue",
 
     "ui.close": "close",
@@ -1907,6 +1909,7 @@
     "console.filter.elders": "Leviathans Arrival",
     "console.filter.blackcoin": "Blackcoin Transactions",
     "console.filter.festival": "Festivals",
+    "console.filter.undo": "Undo Action",
 
     "village.bonus.desc.chemist": "Chemical crafting bonus",
     "village.bonus.desc.engineer": "Crafting bonus",
