--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1126,6 +1126,9 @@
     "religion.tu.singularity.label": "Event Horizon",
     "religion.tu.singularity.desc": "Improve global resource limits by 10%",
     "religion.tu.singularity.flavor": "A gateway... To what?",
+    "religion.undo.praise.regained": "Regained {0} faith.",
+    "religion.undo.praise.nogain": "The sun was successfully un-praised, however, no faith could be recovered.",
+    "religion.undo.praise.failure": "Unable to take back your praise. Nothing happens.",
     "religion.undo.refine.complete": "The un-refining yielded {0} {1}.",
     "religion.undo.refine.incomplete": "The refining could only be partially undone. Regained {0} {1}.",
     "religion.zu.blackPyramid.label": "Black Pyramid",
@@ -1823,6 +1826,7 @@
     "ui.undo.bld.downgrade": "Undo downgrading {0} into {1}.",
     "ui.undo.bld.sell": "Undo selling {0}x {1}.",
     "ui.undo.bld.upgrade": "Undo upgrading {0} into {1}.",
+    "ui.undo.religion.praise": "Un-praise the sun for {0} worship.",
     "ui.undo.religion.refine": "Undo refining {0} {1} into {2} {3}.",
     "ui.undo.workshop.craft": "Undo crafting {0} {1}.",
     "ui.queue.link": "Queue",
