--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1776,6 +1776,7 @@
     "trade.embassy.pinned": "Pinned",
     "trade.embassy.unpinned": "Unpinned",
     "trade.embassy.open": "Open",
+    "trade.undo.missing": "Cannot undo the trade because {0} is missing.",
 
     "turnHGOff.confirmation.msg": "Are you sure you want to turn off Holy Genocide for this and future runs?",
 
@@ -1828,6 +1829,7 @@
     "ui.undo.bld.upgrade": "Undo upgrading {0} into {1}.",
     "ui.undo.diplomacy.build.one.embassy": "Undo building an Embassy ({0}).",
     "ui.undo.diplomacy.build.many.embassies": "Undo building {0}x Embassies ({1}).",
+    "ui.undo.diplomacy.trade": "Undo trade x{0} with the {1}.",
     "ui.undo.religion.praise": "Un-praise the sun for {0} worship.",
     "ui.undo.religion.refine": "Undo refining {0} {1} into {2} {3}.",
     "ui.undo.workshop.craft": "Undo crafting {0} {1}.",
