Add undo fix Cryochamber

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1830,6 +1830,8 @@
     "ui.undo.diplomacy.build.one.embassy": "Undo building an Embassy ({0}).",
     "ui.undo.diplomacy.build.many.embassies": "Undo building {0}x Embassies ({1}).",
     "ui.undo.diplomacy.trade": "Undo trade x{0} with the {1}.",
+    "ui.undo.fix.one.cryochamber": "Undo fixing a cryochamber",
+    "ui.undo.fix.many.cryochambers": "Undo fixing {0}x cryochambers",
     "ui.undo.religion.praise": "Un-praise the sun for {0} worship.",
     "ui.undo.religion.refine": "Undo refining {0} {1} into {2} {3}.",
     "ui.undo.workshop.craft": "Undo crafting {0} {1}.",
