Add undo buy Pacts (fails if Fractured)

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1126,6 +1126,7 @@
     "religion.tu.singularity.label": "Event Horizon",
     "religion.tu.singularity.desc": "Improve global resource limits by 10%",
     "religion.tu.singularity.flavor": "A gateway... To what?",
+    "religion.undo.buy.pact.fractured": "It is <b>too late</b> to unmake this pact.",
     "religion.undo.praise.regained": "Regained {0} faith.",
     "religion.undo.praise.nogain": "The sun was successfully un-praised, however, no faith could be recovered.",
     "religion.undo.praise.failure": "Unable to take back your praise. Nothing happens.",
@@ -1832,6 +1833,7 @@
     "ui.undo.diplomacy.trade": "Undo trade x{0} with the {1}.",
     "ui.undo.fix.one.cryochamber": "Undo fixing a cryochamber",
     "ui.undo.fix.many.cryochambers": "Undo fixing {0}x cryochambers",
+    "ui.undo.religion.pact": "Unmake {0}x {1}.",
     "ui.undo.religion.praise": "Un-praise the sun for {0} worship.",
     "ui.undo.religion.refine": "Undo refining {0} {1} into {2} {3}.",
     "ui.undo.workshop.craft": "Undo crafting {0} {1}.",
