--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1126,12 +1126,14 @@
     "religion.tu.singularity.label": "Event Horizon",
     "religion.tu.singularity.desc": "Improve global resource limits by 10%",
     "religion.tu.singularity.flavor": "A gateway... To what?",
+    "religion.undo.adore.failure": "Unable to take back your adoration. Nothing happens.",
+    "religion.undo.adore.regained": "Regained {0} worship.",
     "religion.undo.buy.pact.fractured": "It is <b>too late</b> to unmake this pact.",
-    "religion.undo.praise.regained": "Regained {0} faith.",
-    "religion.undo.praise.nogain": "The sun was successfully un-praised, however, no faith could be recovered.",
-    "religion.undo.praise.failure": "Unable to take back your praise. Nothing happens.",
     "religion.undo.refine.complete": "The un-refining yielded {0} {1}.",
+    "religion.undo.praise.failure": "Unable to take back your praise. Nothing happens.",
     "religion.undo.refine.incomplete": "The refining could only be partially undone. Regained {0} {1}.",
+    "religion.undo.praise.nogain": "The sun was successfully un-praised, however, no faith could be recovered.",
+    "religion.undo.praise.regained": "Regained {0} faith.",
     "religion.zu.blackPyramid.label": "Black Pyramid",
     "religion.zu.blackPyramid.desc": "A dark relic of unspeakable horrors.",
     "religion.zu.blackPyramid.flavor": "What have we done?!",
@@ -1833,6 +1835,7 @@
     "ui.undo.diplomacy.trade": "Undo trade x{0} with the {1}.",
     "ui.undo.fix.one.cryochamber": "Undo fixing a cryochamber",
     "ui.undo.fix.many.cryochambers": "Undo fixing {0}x cryochambers",
+    "ui.undo.religion.adore": "Un-adore the galaxy.",
     "ui.undo.religion.pact": "Unmake {0}x {1}.",
     "ui.undo.religion.praise": "Un-praise the sun for {0} worship.",
     "ui.undo.religion.refine": "Undo refining {0} {1} into {2} {3}.",
