Undo System Update (part 2) (#142)
* Add undo buy/sell space building

* Add undo build CFU/VSU

* Add undo fix Cryochamber

* Add undo refining tears into BLS

* Add undo buy Pacts (fails if Fractured)

* Add undo adore the galaxy

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1126,11 +1126,14 @@
     "religion.tu.singularity.label": "Event Horizon",
     "religion.tu.singularity.desc": "Improve global resource limits by 10%",
     "religion.tu.singularity.flavor": "A gateway... To what?",
-    "religion.undo.praise.regained": "Regained {0} faith.",
-    "religion.undo.praise.nogain": "The sun was successfully un-praised, however, no faith could be recovered.",
-    "religion.undo.praise.failure": "Unable to take back your praise. Nothing happens.",
+    "religion.undo.adore.failure": "Unable to take back your adoration. Nothing happens.",
+    "religion.undo.adore.regained": "Regained {0} worship.",
+    "religion.undo.buy.pact.fractured": "It is <b>too late</b> to unmake this pact.",
     "religion.undo.refine.complete": "The un-refining yielded {0} {1}.",
+    "religion.undo.praise.failure": "Unable to take back your praise. Nothing happens.",
     "religion.undo.refine.incomplete": "The refining could only be partially undone. Regained {0} {1}.",
+    "religion.undo.praise.nogain": "The sun was successfully un-praised, however, no faith could be recovered.",
+    "religion.undo.praise.regained": "Regained {0} faith.",
     "religion.zu.blackPyramid.label": "Black Pyramid",
     "religion.zu.blackPyramid.desc": "A dark relic of unspeakable horrors.",
     "religion.zu.blackPyramid.flavor": "What have we done?!",
@@ -1830,6 +1833,10 @@
     "ui.undo.diplomacy.build.one.embassy": "Undo building an Embassy ({0}).",
     "ui.undo.diplomacy.build.many.embassies": "Undo building {0}x Embassies ({1}).",
     "ui.undo.diplomacy.trade": "Undo trade x{0} with the {1}.",
+    "ui.undo.fix.one.cryochamber": "Undo fixing a cryochamber",
+    "ui.undo.fix.many.cryochambers": "Undo fixing {0}x cryochambers",
+    "ui.undo.religion.adore": "Un-adore the galaxy.",
+    "ui.undo.religion.pact": "Unmake {0}x {1}.",
     "ui.undo.religion.praise": "Un-praise the sun for {0} worship.",
     "ui.undo.religion.refine": "Undo refining {0} {1} into {2} {3}.",
     "ui.undo.workshop.craft": "Undo crafting {0} {1}.",
