Implement functionality of new Feeding Frenzy policy

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -462,6 +462,8 @@
     "effectsMgr.statics.factoryRefineRatio.title": "Factory refine bonus",
     "effectsMgr.statics.faithFromManuscripts.title": "Faith from manuscripts",
     "effectsMgr.statics.faithRatioReligion.title": "Faith bonus",
+    "effectsMgr.statics.feedEldersEfficiencyRatio.title": "Feeding efficiency",
+    "effectsMgr.statics.feedEldersSpiceCost.title": "Feeding spice cost",
     "effectsMgr.statics.festivalArrivalRatio.title" : "Festival growth rate",
     "effectsMgr.statics.festivalRatio.title" : "Festival effects",
     "effectsMgr.statics.festivalLuxuryConsumptionRatio.title": "Festival luxury consumption",
@@ -839,6 +841,8 @@
     "policy.extravagance.desc": "A faction of epicurean philosophers holds that society ought to double down on its current philosophy. Consumable luxury resources increase happiness even more, but are consumed three times as quickly.",
     "policy.fascism.label" : "Fascism",
     "policy.fascism.desc" : "Lebensraum! Population penalties to happiness are eliminated, and log cabins cost half as much.",
+    "policy.feedingFrenzy.label": "Feeding Frenzy",
+    "policy.feedingFrenzy.desc": "Increase the efficiency of feeding Leviathans by 10% for each unique active Pact, and allow feeding fractional necrocorns. However, feeding now costs spice in addition to necrocorns.",
     "policy.frugality.label": "Frugality",
     "policy.frugality.desc": "Stoic philosophers are placed in charge of the mints, making them more effective by reducing corruption.",
     "policy.fullIndustrialization.label" : "Full Industrialization",
