Policy: Upfront Payment now requires paying necrocorns at the moment of its purchase

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -519,6 +519,7 @@
     "effectsMgr.statics.mysticismBonus.title" : "Mysticism Bonus",
     "effectsMgr.statics.nagaBlueprintTradeChance.title": "Naga blueprint trade chance",
     "effectsMgr.statics.necrocornPerDay.pact.title": "Necrocorn consumption",
+    "effectsMgr.statics.necrocornUpfrontCost.title": "Upfront cost",
     "effectsMgr.statics.neutralRaceEmbassyStanding.title": "Embassy's standing ratio",
     "effectsMgr.statics.nextHashLevelAt.title": "Next hashrate level at",
     "effectsMgr.statics.nonZebraRelationModifier.title" : "Non-zebra relations modifier",
@@ -794,6 +795,7 @@
     "opts.pollution.desc": "Disable pollution effects",
 
     "msg.policy.aiNotMerges" : "AI does not want to merge with kittens.",
+    "msg.policy.cannotPayUpfront": "This policy requires an additional {0} {1}, which you cannot afford.",
     "msg.policy.exclusivity" : "Policies with the same numerical cost are mutually exclusive",
     "msg.policy.kittenNotMadeLeader" : "{0} can only be lead by a {1}",
     "msg.policy.wrongLeaderJobDemoted" : "{0} can only be lead by a {1}",
@@ -929,7 +931,9 @@
     "policy.transkittenism.label" : "Transkittenism",
     "policy.transkittenism.desc" : "Give up kittenhood and merge with the AI. AI cores will be twice as effective, and there is no downside to AI level.",
     "policy.upfrontPayment.label": "Upfront Payment",
-    "policy.upfrontPayment.desc": "Making Pacts will now cost additional necrocorns, but upkeep costs are reduced by 10%. However, debt is more punishing.",
+    "policy.upfrontPayment.desc": "Reduce the Pact upkeep cost by 10%. Making new Pacts costs additional necrocorns. If there is any debt, it is more punishing.<br>Upon purchasing this policy, you must immediately pay the upfront cost for all Pacts you already have.",
+    "policy.upfrontPayment.payment.complete": "Paid {0} necrocorns due to your existing Pacts.",
+    "policy.upfrontPayment.warning": "Consider paying off your debt completely before taking this policy.",
     "policy.zebraRelationsAppeasement.label" : "Zebra Relations: Appeasement",
     "policy.zebraRelationsAppeasement.desc" : "Try to befriend the zebras, even though they hate you. The terms of trade will be less harsh, but gold income will be slightly lower.",
     "policy.zebraRelationsBellicosity.label" : "Zebra Relations: Bellicosity",
