Rework Feeding Frenzy

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -463,7 +463,6 @@
     "effectsMgr.statics.faithFromManuscripts.title": "Faith from manuscripts",
     "effectsMgr.statics.faithRatioReligion.title": "Faith bonus",
     "effectsMgr.statics.feedEldersEfficiencyRatio.title": "Feeding efficiency",
-    "effectsMgr.statics.feedEldersSpiceCost.title": "Feeding spice cost",
     "effectsMgr.statics.festivalArrivalRatio.title" : "Festival growth rate",
     "effectsMgr.statics.festivalRatio.title" : "Festival effects",
     "effectsMgr.statics.festivalLuxuryConsumptionRatio.title": "Festival luxury consumption",
@@ -518,6 +517,7 @@
     "effectsMgr.statics.moonOutpost-unobtainiumPerTickSpace.title": "Lunar Outpost - Unobtainium conversion",
     "effectsMgr.statics.mysticismBonus.title" : "Mysticism Bonus",
     "effectsMgr.statics.nagaBlueprintTradeChance.title": "Naga blueprint trade chance",
+    "effectsMgr.statics.necrocornCorruptionInterference.title": "Corruption interference",
     "effectsMgr.statics.necrocornPerDay.pact.title": "Necrocorn consumption",
     "effectsMgr.statics.necrocornUpfrontCost.title": "Upfront cost",
     "effectsMgr.statics.neutralRaceEmbassyStanding.title": "Embassy's standing ratio",
@@ -845,7 +845,7 @@
     "policy.fascism.label" : "Fascism",
     "policy.fascism.desc" : "Lebensraum! Population penalties to happiness are eliminated, and log cabins cost half as much.",
     "policy.feedingFrenzy.label": "Feeding Frenzy",
-    "policy.feedingFrenzy.desc": "Increase the efficiency of feeding Leviathans by 10% for each unique active Pact, and allow full necrocorn corruption rate up to a max of 1 necrocorn. However, feeding now consumes spice in addition to necrocorns.",
+    "policy.feedingFrenzy.desc": "Increase the efficiency of feeding Leviathans by based on number of active Pacts & unspent Pacts, and allow full necrocorn corruption rate up to a max of 1 necrocorn. However, the frenzy causes interference which reduces necrocorn corruption rate.",
     "policy.frugality.label": "Frugality",
     "policy.frugality.desc": "Stoic philosophers are placed in charge of the mints, making them more effective by reducing corruption.",
     "policy.fullIndustrialization.label" : "Full Industrialization",
@@ -1196,6 +1196,7 @@
     "res.stack.buildings": "Buildings",
     "res.stack.corruptionExistPenalty": "Penalty",
     "res.stack.corruptionFromMarkers": "Markers",
+    "res.stack.corruptionInterference": "Interference",
     "res.stack.corruptionPerDay": "Corruption",
     "res.stack.corruptionPerDayProduction": "Corruption production",
     "res.stack.corruptionPerDaySiphoned": "Siphoning consumption",
