Neo Siphoning, first implementation

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -553,6 +553,7 @@
     "effectsMgr.statics.relicPerDay.title": "Relic production",
     "effectsMgr.statics.relicRefineRatio.title": "Relic refine bonus",
     "effectsMgr.statics.religionUpgradesDiscount.title" : "Religion upgrade discount",
+    "effectsMgr.statics.repayDebtOnNecrocornGeneration.title": "Necrocorn siphoning on generation",
     "effectsMgr.statics.resStasisRatio.title": "Res-Stasis ratio",
     "effectsMgr.statics.researchVessel-starchartPerTickBaseSpace.title": "Research Vessel - Starchart production",
     "effectsMgr.statics.riftChance.title": "Unicorns rift chance",
@@ -576,6 +577,7 @@
     "effectsMgr.statics.skillMultiplier.title": "Kitten's skill effect",
     "effectsMgr.statics.masterSkillMultiplier.title": "Master Kitten's skill effect",
     "effectsMgr.statics.skillXP.title": "Skills learning",
+    "effectsMgr.statics.smallDebtPunishmentExemption.title": "Debt punishment threshold",
     "effectsMgr.statics.smelterRatio.title": "Smelter bonus",
     "effectsMgr.statics.solarFarmRatio.title": "Solar Farm bonus",
     "effectsMgr.statics.solarFarmSeasonRatio.title": "Solar Farm seasonal bonus",
@@ -905,7 +907,7 @@
     "policy.sharkRelationsMerchants.label" : "Shark Relations: Merchants",
     "policy.sharkRelationsMerchants.desc" : "The sharks are experts of traveling through water, but not so much on land. Work together with their merchants to discover and share trade routes through water and land.<br>The more you trade, the more effective it becomes",
     "policy.siphoning.label" : "Siphoning",
-    "policy.siphoning.desc" : "Pacts slow down necrocorn corruption and consume alicorns, instead of directly consuming necrocorns. Lack of alicorns or corruption is compensated by consuming necrocorns.",
+    "policy.siphoning.desc" : "Pacts no longer consume fractional necrocorns over time.  Instead, whenever a necrocorn is produced, it is spent to pay back debt, if the debt is greater than one whole necrocorn.  Small amounts of debt have no negative effects.",
     "policy.socialism.label" : "Socialism",
     "policy.socialism.desc" : "Has no effect",
     "policy.spaceBasedTerraforming.label" : "Space-based terraforming",
