--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -787,7 +787,8 @@
     "opts.enableKS": "Enable Kittens Scientist",
     "opts.enableKS.desc": "This is absolutely unsupported, you have never seen me or this setting",
 
-    "msg.necrocornDeficit.info": "Necrocorn deficit: {0}. Due to the deficit your pacts have {1}% effectivness. Deficit is consuming additional {2}% of necrocorns per day and is diminishing {3} per day (if you have enough necrocorns).",
+    "msg.necrocornDeficit.info": "Necrocorn deficit: {0}. Due to the deficit your pacts have {1}% effectiveness. Deficit is consuming additional {2}% of necrocorns per day and is diminishing {3} per day (if you have enough necrocorns).",
+    "msg.necrocornDeficit.info.with.siphoning": "Necrocorn deficit: {0}. Due to the deficit your pacts have {1}% effectiveness.",
     "msg.necrocornDeficit.upfrontPayment.penalty": "Due to the terms of Upfront Payment, {0} is {1} less effective.",
     "msg.pacts.info": "Karma kittens per millenia are based on available pacts. Pacts do not persist. Available pacts: {0}. Every pact devours {1} necrocorns per day.",
     "msg.pacts.fractured": "You didn't fulfill your part of the deal... You lost {0} alicorns!",
